jclass/snapshots/jdk-java-lang-InternalError.class.snap
---
source: jclass/src/lib.rs
expression: display
---
public class java.lang.InternalError extends java.lang.VirtualMachineError
  minor version: 0
  major version: 68
  flags: (0x0021) ACC_PUBLIC, ACC_SUPER
  this_class: #16                      //java/lang/InternalError
  super_class: #2                      //java/lang/VirtualMachineError
  interfaces: 0, fields: 1, methods: 4, attributes: 1
Constant pool:
   #1 = Methodref          #2.#3            // java/lang/VirtualMachineError."<init>":()V
   #2 = Class              #4               // java/lang/VirtualMachineError
   #3 = NameAndType        #5:#6            // "<init>":()V
   #4 = Utf8               java/lang/VirtualMachineError
   #5 = Utf8               <init>
   #6 = Utf8               ()V
   #7 = Methodref          #2.#8            // java/lang/VirtualMachineError."<init>":(Ljava/lang/String;)V
   #8 = NameAndType        #5:#9            // "<init>":(Ljava/lang/String;)V
   #9 = Utf8               (Ljava/lang/String;)V
  #10 = Methodref          #2.#11           // java/lang/VirtualMachineError."<init>":(Ljava/lang/String;Ljava/lang/Throwable;)V
  #11 = NameAndType        #5:#12           // "<init>":(Ljava/lang/String;Ljava/lang/Throwable;)V
  #12 = Utf8               (Ljava/lang/String;Ljava/lang/Throwable;)V
  #13 = Methodref          #2.#14           // java/lang/VirtualMachineError."<init>":(Ljava/lang/Throwable;)V
  #14 = NameAndType        #5:#15           // "<init>":(Ljava/lang/Throwable;)V
  #15 = Utf8               (Ljava/lang/Throwable;)V
  #16 = Class              #17              // java/lang/InternalError
  #17 = Utf8               java/lang/InternalError
  #18 = Utf8               serialVersionUID
  #19 = Utf8               J
  #20 = Utf8               ConstantValue
  #21 = Long               -9062593416125562365l
  #23 = Utf8               Code
  #24 = Utf8               LineNumberTable
  #25 = Utf8               LocalVariableTable
  #26 = Utf8               this
  #27 = Utf8               Ljava/lang/InternalError;
  #28 = Utf8               message
  #29 = Utf8               Ljava/lang/String;
  #30 = Utf8               cause
  #31 = Utf8               Ljava/lang/Throwable;
  #32 = Utf8               SourceFile
  #33 = Utf8               InternalError.java
{
  private static final long serialVersionUID;
    descriptor: J
    flags: (0x001a) ACC_PRIVATE, ACC_STATIC, ACC_FINAL
    ConstantValue: long -9062593416125562365l
  
  public java.lang.InternalError();
    descriptor: ()V
    flags: (0x0001) ACC_PUBLIC
    Code: 
      stack=1, locals=1, args_size=1
         0: aload_0                 
         1: invokespecial #1                  // Method java/lang/VirtualMachineError."<init>":()V
         4: return                  
      LineNumberTable:
        line 41: 0
        line 42: 4
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        5     0  this   Ljava/lang/InternalError;
  
  public java.lang.InternalError(java.lang.String);
    descriptor: (Ljava/lang/String;)V
    flags: (0x0001) ACC_PUBLIC
    Code: 
      stack=2, locals=2, args_size=2
         0: aload_0                 
         1: aload_1                 
         2: invokespecial #7                  // Method java/lang/VirtualMachineError."<init>":(Ljava/lang/String;)V
         5: return                  
      LineNumberTable:
        line 51: 0
        line 52: 5
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        6     0  this   Ljava/lang/InternalError;
           0        6     1  message Ljava/lang/String;
  
  public java.lang.InternalError(java.lang.String, java.lang.Throwable);
    descriptor: (Ljava/lang/String;Ljava/lang/Throwable;)V
    flags: (0x0001) ACC_PUBLIC
    Code: 
      stack=3, locals=3, args_size=3
         0: aload_0                 
         1: aload_1                 
         2: aload_2                 
         3: invokespecial #10                 // Method java/lang/VirtualMachineError."<init>":(Ljava/lang/String;Ljava/lang/Throwable;)V
         6: return                  
      LineNumberTable:
        line 70: 0
        line 71: 6
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        7     0  this   Ljava/lang/InternalError;
           0        7     1  message Ljava/lang/String;
           0        7     2  cause  Ljava/lang/Throwable;
  
  public java.lang.InternalError(java.lang.Throwable);
    descriptor: (Ljava/lang/Throwable;)V
    flags: (0x0001) ACC_PUBLIC
    Code: 
      stack=2, locals=2, args_size=2
         0: aload_0                 
         1: aload_1                 
         2: invokespecial #13                 // Method java/lang/VirtualMachineError."<init>":(Ljava/lang/Throwable;)V
         5: return                  
      LineNumberTable:
        line 86: 0
        line 87: 5
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        6     0  this   Ljava/lang/InternalError;
           0        6     1  cause  Ljava/lang/Throwable;
}
SourceFile: "InternalError.java"
